Third commit (you can package the plugin with mvn clean package)